# pyislamic_prayer

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
pyislamic-prayer/: __init__.py  high_latitude.py  prayer_times.py  qibla.py  test.py
pyislamic_prayer/: astronomy.py  madhab.py  methods.py
tests/: test.py
